<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:transitionName="@string/activity_trans"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <GridLayout
        android:id="@+id/gridlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:useDefaultMargins="true">

        <TextView
            android:id="@+id/schoolname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="0"
            android:text="New Text"
            android:textSize="@dimen/abc_text_size_large_material"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/labelwebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/schoollabel_website" />

        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:autoLink="web"
            android:text="www.google.com" />

        <TextView
            android:id="@+id/labellevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/schoollabel_level" />

        <TextView
            android:id="@+id/levels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:text="High School" />

        <TextView
            android:id="@+id/labelformat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/schoollabel_format" />

        <TextView
            android:id="@+id/format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:text="In School" />

        <TextView
            android:id="@+id/labelgender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/schoollabel_gender" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            android:text="Both" />

        <TextView
            android:id="@+id/labellanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/schoollabel_language" />

        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="5"
            android:text="Java" />

        <TextView
            android:id="@+id/labelonline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="6"
            android:text="@string/schoollabel_online" />

        <TextView
            android:id="@+id/online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="6"
            android:text="False" />

        <TextView
            android:id="@+id/labelnostudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="7"
            android:text="@string/schoollabel_nostudent" />

        <TextView
            android:id="@+id/nostudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="7"
            android:text="20" />

        <TextView
            android:id="@+id/labelcontact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="8"
            android:text="@string/schoollabel_contactnumber" />

        <TextView
            android:id="@+id/contactnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="8"
            android:autoLink="phone"
            android:text="3037611764" />

        <TextView
            android:id="@+id/labellabelemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="9"
            android:text="@string/schoollabel_email" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="9"
            android:autoLink="email"
            android:text="mcguire@mullenhigh.com" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="10"
            android:text="3602 S. Lowell Blvd, Denver, CO 50236" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="11"
            android:text="school desc" />

    </GridLayout>
    <TextView
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="  " />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
