<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.futurenav.cuong.futurenav.SchoolActivityFragment">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="0dp"
            app:layout_scrollFlags="scroll|enterAlways"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/t"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize">
        <ImageView
            android:id="@+id/powerbygoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/powered_by_google_light"
            android:contentDescription="@string/cd_powered_by_google"/>
        <com.futurenav.cuong.futurenav.ClearableAutoCompleteText
            android:id="@+id/autocomplete_places"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:drawableStart="@android:drawable/ic_menu_search"
            android:drawableRight="@drawable/xc"
            android:drawableEnd="@drawable/xc"
            android:hint="@string/autocomplete_hint"
            android:textColor="@android:color/primary_text_light"
            android:contentDescription="@string/autocomplete_hint"/>
        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/map_height" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/schoollist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="@string/activity_trans" />

    </LinearLayout>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/secondary_text"
        app:layout_anchor="@+id/schoollist"
        app:layout_anchorGravity="fill"
        android:text="i am blank"
        android:gravity="bottom|center" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fav_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/bookmark"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        app:layout_anchor="@+id/map"
        app:layout_anchorGravity="bottom|right|end"
        app:pressedTranslationZ="12dp"
        android:contentDescription="@string/cd_actionbutton"/>
</android.support.design.widget.CoordinatorLayout>


